# salesgym

./: .env.example  .gitignore  README.md  evaluation.md  pyproject.toml  requirements.txt  start.sh
docs/: n8n-workflow.json
docs/plans/: 2026-04-05-salesgym-design.md
src/: __init__.py  analyzer.py  api.py  arena.py  config.py  customer_simulator.py  dashboard.py  dify_agent.py  eval.py  evolution.py  memory.py  models.py  scoring.py  seed_data.py  voice.py
tests/: test_api.py  test_customer_simulator.py  test_dify_agent.py  test_memory.py  test_models.py  test_scoring.py  test_seed_data.py  test_voice.py
